--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -1,12 +1,76 @@
 .detailspage-main-div{
     font-family: Helvetica, sans-serif;
     .detailspage{
+        .filters.filters-mobile {
+                width: 100% !important;
+                background: $secondary-color;
+                color: $white;
+                position: absolute;
+                z-index: 100;
+                display: none;
+
+                &.show {
+                    display: block;
+                }
+
+                .single-filter {
+                    margin: 20px;
+
+                    .select-styled{
+                        background: white;
+                        border-radius: 10px;
+                        padding-right: 30px;
+
+                    }
+
+                    .select-label{
+                        margin-right: 10px;
+                        font-size: 16px;
+                        color: $primary-color;
+                    }
+
+                    ul {
+                        li {
+                            display: inline-block;
+
+                            .container {
+                                .checkmark {
+                                    border: 1px solid $white !important;
+
+                                    &:after {
+                                        left: 4px;
+                                        top: 1px;
+                                        width: 5px;
+                                        height: 10px;
+                                        border: solid $border-color;
+                                        border-width: 0 3px 3px 0;
+                                        -webkit-transform: rotate(45deg);
+                                        transform: rotate(45deg);
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    .irs-line {
+                        border: 1px solid $white;
+                        background-color: $white !important;
+                    }
+                }
+            }
         .zoom-img-variation{
             cursor: zoom-in;
         }
         .carousel-img
         {
             cursor: pointer;
+        }
+        .controls-div{
+            height: 33px;
+            .-icon{
+               font-size: 22px;
+               margin: 5px; 
+            }
         }
 
         .-images-container{
