--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -183,6 +183,35 @@
             }
         }
     }
+
+    // .nav-tabs {
+    //     display:none;
+    // }
+
+    // @media(min-width:768px) {
+    //     .nav-tabs {
+    //         display: flex;
+    //     }
+
+    //     .card {
+    //         border: none;
+    //     }
+
+    //     .card .card-header {
+    //         display:none;
+    //     }  
+
+    //     .card .collapse{
+    //         display:block;
+    //     }
+    // }
+
+    // @media(max-width:767px){
+    //     .tab-pane {
+    //         display: block !important;
+    //         opacity: 1;
+    //     }
+    // }
 }
 
 .drift-zoom-pane {
@@ -210,4 +239,8 @@
             margin: 10px 0px;
         }
     }
+}
+
+.tab-pane{
+    margin-top: 10px;
 }
