--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -239,6 +239,20 @@
             margin: 10px 0px;
         }
     }
+
+    .prod-desc{
+        padding: 0px;
+    }
+
+    .detailspage{
+        .container{
+            padding: 0px;
+        }
+    }
+
+    .tab-content{
+        padding: 15px;
+    }
 }
 
 .tab-pane{
