--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -36,6 +36,7 @@
                     text-align: left;
                     font-size: 14px;
                     line-height: 14px;
+                    z-index: 100;
 
                     .-prices {
                         .-cprice {
