Bug fix : Add close button for product image on details page.

--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -283,3 +283,16 @@
         }
     }
 }
+
+.close-main-btn{
+    position: absolute;
+    right: 0;
+    font-size: 30px;
+    margin: 20px;
+    z-index: 1000;
+    cursor: pointer;
+}
+
+.prod-main-img{
+    display: none;
+}
