Wishlist icon fix.

--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -55,6 +55,7 @@
                     margin: 15px;
                     top: 0px;
                     right: 0px;
+                    z-index:100;
 
                     .-icon {
                         font-size: 20px;
