--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -22,6 +22,7 @@
 
                 .variation-img{
                     position: absolute;
+                    bottom: 0px;
                     z-index: 1;
                     left: 0;
                 }
