--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -121,11 +121,7 @@
             font-weight: 600;
             .pdp-buy-btn{    
                 width: 100%;
-                color: $primary-color;
-                background-color: $secondary-color;
-                font-size: 24px;
-                border-radius: 10px;
-                margin: 15px 0px;
+                @include primary-button;
             }
 
             .select-label{
