--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -31,13 +31,14 @@
                     position: absolute;
                     bottom: 0px;
                     padding: 5px;
-                    width: 100%;
-                    background-color: rgba(255, 255, 255, 0.7);
+                    width: 100%;    
+                    background-color: rgba(0,0,0, 0.4);
                     height: 25px;
                     text-align: left;
                     font-size: 14px;
                     line-height: 14px;
                     z-index: 100;
+                    color: $white;
 
                     .-prices {
                         .-cprice {
