Fix login issue.

--- a/resources/sass/navbar.scss
+++ b/resources/sass/navbar.scss
@@ -32,6 +32,14 @@
                 background-color: $primary-color !important;
             }
         }
+        & > li.-username{
+            a{
+                color: $font-color-black;
+                .fa-sign-out{
+                    margin: 7px;
+                }
+            }
+        }
     }
 
     .navbar-toggler{
