--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -58,9 +58,15 @@
                     top: 0px;
                     right: 0px;
                     z-index:100;
-
+                    
                     .-icon {
                         font-size: 20px;
+                    }
+
+                    &.marked{
+                        .-icon{
+                            font-weight: 900;
+                        }
                     }
                 }
 
