--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -1,8 +1,8 @@
-.listing-main-div {
-    .searchbar {
-        top: 8px;
-    }
-}
+// .listing-main-div {
+//     .searchbar {
+//         top: 8px;
+//     }
+// }
 
 input:disabled + .checkmark, input:disabled + .checkmark + .text{
     color: #ccc;
