--- a/resources/sass/searchbar.scss
+++ b/resources/sass/searchbar.scss
@@ -46,6 +46,7 @@
         left: 0px !important;
         border-radius: 0px;
         width: 100% !important;
+        z-index: 10;
 
         &:not(.open){
             display: none;
