Details page description.

--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -258,6 +258,8 @@
 .card .card-header{
     background: $secondary-color;
     .btn.btn-link {
+        width: 100%;
+        text-align: left;
         &:hover{
             color: $primary-color;
         }
