--- a/resources/sass/carousel.scss
+++ b/resources/sass/carousel.scss
@@ -7,7 +7,10 @@
         margin: auto;
         text-align: center;
         .carousel-img{
-            margin: auto;
+            margin: auto;    
+            width: 35px;
+            height: 35px;
+            object-fit: cover;
         }
         .responsive-img-a{
             outline: none;
