--- a/resources/sass/carousel.scss
+++ b/resources/sass/carousel.scss
@@ -7,10 +7,12 @@
         margin: auto;
         text-align: center;
         .carousel-img{
-            margin: auto;    
-            width: 35px;
-            height: 35px;
-            object-fit: cover;
+            margin: auto;  
+            &:not(.zoom-img){  
+                width: 35px;
+                height: 35px;
+                object-fit: cover;
+            }
         }
         .responsive-img-a{
             outline: none;
