--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -2,6 +2,12 @@
     font-family: Helvetica, sans-serif;
     .detailspage{
         .wishlist-icon{
+            @include media-breakpoint-up(md){
+                position: absolute;
+                right: 0px;
+                top: 0;
+                font-size: 21px;            
+            }
             &.marked{
                 .-icon{
                     font-weight: 900;
