--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,6 +75,20 @@ html, body {
     }
 }
 
-.privacy-policy, .terms-container{
+.privacy-policy, .terms-container, .aboutus{
     margin: 20px auto;
+}
+
+.aboutus-main-div{
+    .footer{
+        padding: 0px 15px;
+        position: absolute;
+    }
+    .main-heading{
+        color: $primary-color;
+        margin: 30px 0px 20px 0px;
+    }
+    .secondary-heading{
+        margin: 20px 0px;
+    }
 }
