--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -80,6 +80,7 @@ html, body {
 }
 
 .aboutus-main-div{
+    background-color: $body-bg-option;
     .footer{
         padding: 0px 15px;
         position: absolute;
@@ -87,8 +88,19 @@ html, body {
     .main-heading{
         color: $primary-color;
         margin: 30px 0px 20px 0px;
+        font-size: 30px;
     }
     .secondary-heading{
-        margin: 20px 0px;
+        margin: 25px 0px;
+    }
+    p{
+        margin: 15px 0px;
+        font-size: 18px;
+    }
+}
+
+.socials{
+    .-icon{
+        color: $secondary-color;
     }
 }
