Add brands widths

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -104,3 +104,24 @@ html, body {
         color: $secondary-color;
     }
 }
+
+.brand-logos{
+    .-cb2{
+        max-width: 57px;
+    }
+    .-crate{
+        max-width: 141px;
+    }
+    .-pier1{
+        max-width: 107px;
+    }
+    .-westelm{
+        max-width: 127px;
+    }
+    .-worldmarket{
+        max-width: 116px;
+    }
+    .more-soon{
+        max-width: 189px;
+    }
+}
