--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -1,13 +1,13 @@
-.footer{
+.footer {
     padding: 15px;
     position: relative;
     bottom: 0px;
     width: 100%;
-    .copyright{
-        font-size: 14px
+    .copyright {
+        font-size: 14px;
     }
-    .policy-terms{
-        a{
+    .policy-terms {
+        a {
             color: $secondary-color;
         }
     }
