changes to product UI part

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -116,17 +116,22 @@ body {
     }
     .-crate {
         max-width: 141px;
+        margin: 0 20px;
     }
     .-pier1 {
         max-width: 107px;
+        margin: 0 20px;
     }
     .-westelm {
         max-width: 127px;
+        margin: 0 20px;
     }
     .-worldmarket {
         max-width: 116px;
+        margin: 0 20px;
     }
     .more-soon {
         max-width: 189px;
+        margin: 0 20px;
     }
 }
