reverting change for header

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -4,13 +4,15 @@
 //     }
 // }
 
-input:disabled + .checkmark, input:disabled + .checkmark + .text{
+input:disabled + .checkmark,
+input:disabled + .checkmark + .text {
     color: #ccc;
     border-color: #ccc !important;
 }
 
 .listing {
-    .slick-prev, .slick-next {
+    .slick-prev,
+    .slick-next {
         &:before {
             font-size: 30px;
             line-height: 10px;
@@ -35,7 +37,7 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
 
             @media only screen and (min-width: 768px) {
                 position: sticky;
-                max-height: calc( 100vh - #{$navbar-height} );
+                max-height: calc(100vh - #{$navbar-height});
                 position: -webkit-sticky;
                 position: -moz-sticky;
                 position: -ms-sticky;
@@ -107,7 +109,7 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
 
                         /* Create the checkmark/indicator (hidden when not checked) */
                         .checkmark:after {
-                            content: "";
+                            content: '';
                             position: absolute;
                             display: none;
                         }
@@ -165,7 +167,6 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
                 //         cursor: pointer;
                 //     }
                 // }
-           
             }
         }
 
@@ -199,7 +200,8 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
                 width: 100%;
                 height: $listing-top-ctrl-height;
 
-                .filter-toggle, .view-items-toggle {
+                .filter-toggle,
+                .view-items-toggle {
                     margin: 5px;
                     font-size: 23px;
                 }
@@ -281,7 +283,7 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
                 }
 
                 &:before {
-                    content: "";
+                    content: '';
                     position: absolute;
                     width: 0;
                     height: 0;
@@ -333,19 +335,21 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
     }
 
     .main-container {
-        min-height: calc(100vh - #{$navbar-height-mobile} - #{$listing-top-ctrl-height}) !important;
+        min-height: calc(
+            100vh - #{$navbar-height-mobile} - #{$listing-top-ctrl-height}
+        ) !important;
     }
 
     .dropdown-submenu {
         position: relative;
 
-        @include media-breakpoint-down(md){
-            .dropdown-item{
+        @include media-breakpoint-down(md) {
+            .dropdown-item {
                 width: 90%;
             }
-            .dropdown-toggle{
+            .dropdown-toggle {
                 margin-top: 4px;
-            }  
+            }
         }
     }
 
@@ -353,13 +357,13 @@ input:disabled + .checkmark, input:disabled + .checkmark + .text{
         transform: rotate(-90deg);
         position: absolute;
         right: 6px;
-        top: .8em;
+        top: 0.8em;
     }
 
     .dropdown-submenu .dropdown-menu {
         top: 0;
         left: 100%;
-        margin-left: .1rem;
-        margin-right: .1rem;
+        margin-left: 0.1rem;
+        margin-right: 0.1rem;
     }
 }
