--- a/resources/sass/navbar.scss
+++ b/resources/sass/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
     height: $navbar-height;
-    background-color: $secondary-color !important;
+    background-color: transparent !important;
     color: $secondary-color;
     font-size: 18px;
 
