--- a/resources/sass/subnav.scss
+++ b/resources/sass/subnav.scss
@@ -13,7 +13,7 @@
 .navbar-default .navbar-nav > li > a,
 .mainmenu ul li a,
 .navbar-expand-lg .navbar-nav .nav-link {
-    color: $golden;
+    color: $secondary-color;
     font-size: 20px;
     text-transform: capitalize;
     padding: 0px 15px;
