ui and ordering

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -184,7 +184,7 @@ input:disabled + .checkmark + .text {
     }
 }
 .category-img {
-    width: 300px;
+    width: 100%;
     margin: 20px 0;
 }
 .category-img-container {
