--- a/resources/sass/detailspage.scss
+++ b/resources/sass/detailspage.scss
@@ -279,6 +279,12 @@
 
 .card .card-header {
     background: $secondary-color;
+
+    .btn-link {
+        &:hover {
+            text-decoration: none;
+        }
+    }
     .btn.btn-link {
         width: 100%;
         text-align: left;
